<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileFragment"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/top_barra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:padding="5dp"
                android:layout_gravity="center_vertical"
                />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/colorPrimaryDark"
            android:padding="20dp">

            <ImageView
                android:id="@+id/my_profile_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/inverse_logo"/>

            <TextView
                android:id="@+id/user_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/my_profile_img"
                android:fontFamily="@font/roboto_slab_bold"
                android:paddingLeft="15dp"
                android:text="@string/nickname"
                android:textSize="24sp"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_username"
                android:hint="@string/user_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray_light"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:text="@string/user_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawableTint="@color/colorPrimaryLight"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:textColor="@color/gray_dark"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_phone"
                android:hint="@string/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray_light"
                android:layout_marginBottom="10dp"
                android:elevation="20dp"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@string/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_phone_24"
                    android:drawableTint="@color/colorPrimaryLight"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/roboto"
                    android:textSize="18sp"
                    android:textColor="@color/gray_dark"/>

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/user_address"
                android:id="@+id/edit_text_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray_light"
                android:layout_marginBottom="10dp"
                android:elevation="@dimen/cardview_default_elevation"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@string/user_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:drawableTint="@color/colorPrimaryLight"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/roboto"
                    android:textSize="18sp"
                    android:textColor="@color/gray_dark"/>

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/user_mail"
                android:id="@+id/edit_text_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray_light"
                android:layout_marginBottom="10dp"
                android:elevation="@dimen/cardview_default_elevation"/>

            <com.google.android.material.textfield.TextInputEditText
                android:text="@string/user_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawableTint="@color/colorPrimaryLight"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:textColor="@color/gray_dark"/>



        </LinearLayout>


        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:text="@string/btn_update"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            android:layout_margin="16dp"
            android:elevation="10dp"
            >

        </Button>


    </LinearLayout>

</ScrollView>